--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-text-replace",
   "description": "General purpose text-replacement for grunt",
-  "version": "0.2.1",
+  "version": "0.2.0",
   "author": "Jonathan Holmes",
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
     "node": "*"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test --force"
   },
   "devDependencies": {
     "grunt": "~0.3.17"
