Fixed illegal JSON character in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "grunt-text-replace",
-  "description": "General purpose text replacement for grunt. Allows you to 
-  replace text in files using strings, regexs or functions.",
+  "description": "General purpose text replacement for grunt. Allows you to replace text in files using strings, regexs or functions.",
   "version": "0.2.3",
   "author": "Jonathan Holmes",
   "repository": {
