--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-text-replace",
   "description": "Replace text in files using strings, regexs or functions.",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "homepage": "https://github.com/yoniholmes/grunt-text-replace/issues",
   "author": "Jonathan Holmes",
   "repository": {
@@ -37,7 +37,5 @@
     "regex",
     "function"
   ],
-  "dependencies": {
-    "socket.io": "~0.9.14"
-  }
+  "dependencies": {}
 }
