--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "test": "grunt --force"
   },
   "devDependencies": {
+    "grunt": ">= 0.4.1",
     "grunt-contrib-jshint": ">= 0.6.3",
     "grunt-contrib-nodeunit": ">= 0.2.0",
-    "grunt": ">= 0.4.1"
+    "sinon": "^1.12.1"
   },
   "keywords": [
     "gruntplugin",
